--- a/client/src/components/Card.scss
+++ b/client/src/components/Card.scss
@@ -1,41 +1,77 @@
+// .card{
+    
+
+//     img{
+//         width:100%;
+//         height: 68%;
+//         display: block;
+//     }
+//     .card__cnt{
+//         box-sizing: border-box;
+//         height:32%;
+//         padding: 5px 5px 0px 5px;
+//         p{
+            
+//             height: 73%;
+//             overflow: auto;
+//         }
+//         .card-btn-container{
+//             box-sizing: border-box;
+//             height:27%;
+//             width:100%;
+//             padding: 8px 0px;
+//             button{
+//                 box-sizing: border-box;
+//                 margin-right: 10px;
+//                 height: 100%;
+//                 float:right;
+//                 padding: 0px 10px;
+//             }
+//         }
+//     } 
+// }
+
+// .card__img .card__btn .card__text{
+//     padding:0px;
+//     margin:0px;
+// }
+
+// .card__img{
+//     width:100%;
+//     height: 68%;
+//     display: block;
+// }
+
+
 .card{
     box-sizing: border-box;
     width:350px;
     height:630px;
     box-shadow: 0.1rem 0.1rem 0.1rem 0.2rem rgba(0, 0, 0, 0.2);
     border-radius: 0.3rem;
-    display:inline-block;
-    img, button, p{
-        padding:0px;
-        margin:0px;
-    }
-
-    img{
-        width:100%;
-        height: 68%;
-        display: block;
-    }
-    .cnt-card{
-        box-sizing: border-box;
-        height:32%;
-        padding: 5px 5px 0px 5px;
-        p{
-            
-            height: 73%;
-            overflow: auto;
-        }
-        .card-btn-container{
-            box-sizing: border-box;
-            height:27%;
-            width:100%;
-            padding: 8px 0px;
-            button{
-                box-sizing: border-box;
-                margin-right: 10px;
-                height: 100%;
-                float:right;
-                padding: 0px 10px;
-            }
-        }
-    } 
+    display:flex;
+    flex-direction:column;
+    margin-bottom: 50px;
+}
+.card__img{
+    flex:68;
+}
+$pd-rl: 7px;
+.card__text{
+    flex:23;
+    margin:0px;
+    overflow: auto;
+    padding:0px $pd-rl;
+}
+.card__btn{
+    margin: 7px 7px;
+    flex:9;
+    border:none;
+    background-color:#2498e6;
+    color:white;
+    border-radius:0.3rem;
+    font-size: 15px;
+}
+.card__btn:hover{
+    cursor:pointer;
 }
