--- a/client/src/components/Card.scss
+++ b/client/src/components/Card.scss
@@ -1,48 +1,7 @@
-// .card{
-    
-
-//     img{
-//         width:100%;
-//         height: 68%;
-//         display: block;
-//     }
-//     .card__cnt{
-//         box-sizing: border-box;
-//         height:32%;
-//         padding: 5px 5px 0px 5px;
-//         p{
-            
-//             height: 73%;
-//             overflow: auto;
-//         }
-//         .card-btn-container{
-//             box-sizing: border-box;
-//             height:27%;
-//             width:100%;
-//             padding: 8px 0px;
-//             button{
-//                 box-sizing: border-box;
-//                 margin-right: 10px;
-//                 height: 100%;
-//                 float:right;
-//                 padding: 0px 10px;
-//             }
-//         }
-//     } 
-// }
-
-// .card__img .card__btn .card__text{
-//     padding:0px;
-//     margin:0px;
-// }
-
-// .card__img{
-//     width:100%;
-//     height: 68%;
-//     display: block;
-// }
-
-
+.cards{
+    display:flex;
+    flex-wrap: wrap;
+}
 .card{
     box-sizing: border-box;
     width:350px;
@@ -51,7 +10,6 @@
     border-radius: 0.3rem;
     display:flex;
     flex-direction:column;
-    margin-bottom: 50px;
 }
 .card__img{
     flex:68;
