--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -1,23 +1,44 @@
-$navbar_l_r_padding: 50px;
-#navbar{ 
-    height:60px;
-    width:100%;
+// $navbar_l_r_padding: 50px;
+// #navbar{ 
+//     height:60px;
+//     width:100%;
+//     display:flex;
+//     align-items: center;
+//     background-color:#181718;
+//     color: white;
+//     justify-content: space-between;
+//     .left{
+//         padding-left:$navbar_l_r_padding;
+//     }
+//     .right{
+//         display:flex;
+//         align-items:center;
+//         padding-right: $navbar_l_r_padding;
+//     }
+//     h1, h2{
+//         padding:0px;
+//         margin:0px;
+//     }
+// }
+
+.Navbar{
+    background:#181718;
+    color:white;
     display:flex;
-    align-items: center;
-    background-color:#181718;
-    color: white;
+    align-items:center;
+    font-family:arial;
     justify-content: space-between;
-    .left{
-        padding-left:$navbar_l_r_padding;
-    }
-    .right{
-        display:flex;
-        align-items:center;
-        padding-right: $navbar_l_r_padding;
-    }
-    h1, h2{
-        padding:0px;
-        margin:0px;
-    }
 }
 
+.Navbar__list{
+    display:flex;
+    align-items:center;
+    margin:0px 30px;
+}
+.Navbar__list__text{
+    margin: 0px 14px;
+}
+.Navbar__list__text--outline{
+    border: 2px solid white; 
+    padding :7px 15px;
+}
