--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -1,26 +1,3 @@
-// $navbar_l_r_padding: 50px;
-// #navbar{ 
-//     height:60px;
-//     width:100%;
-//     display:flex;
-//     align-items: center;
-//     background-color:#181718;
-//     color: white;
-//     justify-content: space-between;
-//     .left{
-//         padding-left:$navbar_l_r_padding;
-//     }
-//     .right{
-//         display:flex;
-//         align-items:center;
-//         padding-right: $navbar_l_r_padding;
-//     }
-//     h1, h2{
-//         padding:0px;
-//         margin:0px;
-//     }
-// }
-
 .Navbar{
     background:#181718;
     color:white;
@@ -28,6 +5,7 @@
     align-items:center;
     font-family:arial;
     justify-content: space-between;
+    height:70px;
 }
 
 .Navbar__list{
