--- a/client/src/components/Navbar.scss
+++ b/client/src/components/Navbar.scss
@@ -13,10 +13,17 @@
     align-items:center;
     margin:0px 30px;
 }
-.Navbar__list__text{
-    margin: 0px 14px;
+.Navbar__list:hover{
+    cursor:pointer;
 }
-.Navbar__list__text--outline{
+.Navbar__list__h1{
+    font-size:27px;
+}
+.Navbar__list__h2{
+    margin: 0px 14px;
+    font-size:20px;
+}
+.Navbar__list__h2--outline{
     border: 2px solid white; 
     padding :5px 15px;
 }
