--- a/client/src/components/customScss/index.scss
+++ b/client/src/components/customScss/index.scss
@@ -1,7 +1,6 @@
 .fluid{
-    padding-left:15px;
-    padding-right:15px;
-    padding-top:15px;
+    margin: 20px 30px 30px 30px;
+    padding:0px;
 }
 button:hover{
     cursor: pointer;
