--- a/client/src/components/customScss/index.scss
+++ b/client/src/components/customScss/index.scss
@@ -68,6 +68,12 @@ button:hover{
 .mr-r-20{
   margin-right:20px;
 }
+.mr-t-10{
+  margin-top:10px;
+}
+.mr-t-20{
+  margin-top:20px;
+}
 
 .mr-b-10{
   margin-bottom:10px;
