--- a/client/src/components/DocumentLeftbar.scss
+++ b/client/src/components/DocumentLeftbar.scss
@@ -1,4 +1,13 @@
 .DocLeftbar{
     background:#e7e9eb;
     width:222px;
+    float:left;
+}
+
+.DocLeftbar__item{
+    padding:5px 0px;
+    padding-left:16px;
+}
+.DocLeftbar__item + .DocLeftbar__item{
+    border-top:1px solid #c6cbcf;
 }
