--- a/client/src/components/customScss/index.scss
+++ b/client/src/components/customScss/index.scss
@@ -5,6 +5,14 @@
 button:hover{
     cursor: pointer;
 }
+.btn{
+  border:none;
+  font-weight: bold;
+  border-radius:0.3rem;
+  padding: 5px 15px;
+  width:100px;
+  box-shadow: 1px 1px 2px black;
+}
 .btn--nav{ 
     height: 100%;
     margin:0px 15px;
@@ -23,6 +31,10 @@ button:hover{
     border-radius:0.3rem;
     border:hidden;
     box-shadow:  1px 1px 2px black;
+}
+.btn--secondary{
+  background-color: rgb(49, 157, 230);
+  color: white;
 }
 .btn--card:hover{
     background-color:rgb(32, 121, 218);
