finish icon event handler for children parts

--- a/client/src/components/Documents/Document.scss
+++ b/client/src/components/Documents/Document.scss
@@ -61,14 +61,21 @@
     flex-direction: column;
     justify-content: flex-end;
 }
-.doc__form__head , .doc__form__content{
+.doc__form__head{
     margin-bottom: 20px;
+}
+.doc__form__head , .doc__form__content{
     border-radius: 0.3rem;
     position: relative;
 }
 .doc__form__content{
     padding: 20px 20px 35px 20px;
     border:1px solid black;
+}
+.doc__form__chilPart__toolbar{
+    display:flex;
+    justify-content: flex-end;
+    margin-bottom: 30px;
 }
 .item__label{
     display:block;
