--- a/client/src/components/Toolbar/Toolbar.scss
+++ b/client/src/components/Toolbar/Toolbar.scss
@@ -7,3 +7,11 @@
     border-radius: 0.3em;
     box-shadow: 0.2rem 0.2rem 0.4rem 0.1rem rgba(0, 0, 0, 0.4);
 }
+.toolbar__item{
+    display: flex;
+}
+
+
+.toolbar--two{
+    width: 65px;
+}
