--- a/client/src/components/Documents/Document.scss
+++ b/client/src/components/Documents/Document.scss
@@ -39,6 +39,7 @@
 .doc__content__leftbar__item{
     padding:5px 0px;
     padding-left:16px;
+    cursor: pointer;
 }
 .doc__content__leftbar__item + .doc__content__leftbar__item{
     border-top:1px solid #c6cbcf;
