--- a/client/src/components/customScss/index.scss
+++ b/client/src/components/customScss/index.scss
@@ -32,13 +32,39 @@ button:hover{
     border:hidden;
     box-shadow:  1px 1px 2px black;
 }
+.btn--submit{
+  font-weight: normal;
+  font-size: 17px;
+  box-shadow: none;
+  border-radius: 0;
+}
 .btn--secondary{
   background-color: rgb(49, 157, 230);
   color: white;
 }
+.btn--purple{
+  background-color: #7488d6;
+  color:white;
+}
 .btn--card:hover{
     background-color:rgb(32, 121, 218);
 }
+
+.input{
+  outline:none;
+  box-sizing: border-box;
+  border: none;
+  // background-color:transparent;
+  // border-bottom: 1px solid rgb(231, 226, 226, .3);  
+}
+.input-login{
+  background-color:transparent;
+  border-bottom: 1px solid rgb(231, 226, 226, .3);
+  color:white;
+  height: 40px;
+  font-size: 20px;
+}
+
 
 .scroll--custom{
     ::-webkit-scrollbar {
@@ -92,4 +118,28 @@ button:hover{
 }
 .mr-b-20{
   margin-bottom:20px;
+}
+
+.pd-tb-10{
+  padding-top:10px;
+  padding-bottom: 10px;
+}
+.pd-tb-15{
+  padding-top:15px;
+  padding-bottom: 15px;
+}
+.pd-tb-20{
+  padding-top:20px;
+  padding-bottom: 20px;
+}
+.pd-tb-30{
+  padding-top:30px;
+  padding-bottom: 30px;
+}
+.w-full{
+  width:100%;
+}
+
+.d-b{
+  display: block;
 }
