--- a/client/src/components/Form/Form.scss
+++ b/client/src/components/Form/Form.scss
@@ -1,12 +1,12 @@
-.login{
+.form{
     width: 670px;
     height: 450px;
-    margin:30px auto;
     display: flex;
     overflow: hidden;
+    border-radius: 0.5rem;
 }
 
-.login__left{
+.form__left{
     width:30%;
     // background-color: #bcd3f7;
     background-image: url('https://i.pinimg.com/originals/c3/76/47/c37647d3cd724c0dc86a7db7627eaba5.jpg');
@@ -16,30 +16,48 @@
     position: relative;
 
 }
-.login__left__img{
-    position: relative;
-    top: -1px;
-    left:32px;
+.form__left__img{
     -webkit-user-drag: none; 
     -khtml-user-drag: none; 
     -moz-user-drag: none; 
     -o-user-drag: none; 
+    opacity: 0.95;
 }
-.login__right{
-    padding:30px 20px;
+.form__left__img--login{
+    position: relative;
+    top: 0px;
+    left:32px;
+}
+.form__left__img--register{
+    position:relative;
+    max-height: 420px;
+    top:30px;
+    left:-50px;
+}
+.form__right{
     width: 68%;
     background-color: #363642;
     color: white;
     display:flex;
     flex-direction:column;
     align-items:center;
+    box-sizing: border-box;
 }
-.login__right__inputs{
+.form__right--login{
+    padding:30px;
+}
+.form__right--register{
+    padding:10px 30px;
+}
+
+.form__right__inputs{
     width: 100%;
     label{
         opacity: 0.5;
         font-size:14px;
     }
+}
+.form__right__inputs--login{
     input + label {
         margin-top: 25px;
     }
@@ -47,14 +65,28 @@
         margin-top:10px;
     }
 }
-.login__right__notify{
+.form__right__inputs--register{
+    width: 100%;
+    label{
+        opacity: 0.5;
+        font-size:14px;
+    }
+    input + label {
+        margin-top: 0px;
+    }
+    label+input{
+        margin-top:0px;
+    }
+}
+
+.form__right__notify{
     margin-top: 10px;
 }
-.login__right__notify__item--span{
+.form__right__notify__item--span{
     opacity: 0.5;
     font-size:14px;
 }
-.login__right__notify__item--a{
+.form__right__notify__item--a{
     color: white;
     opacity: 0.8;
 }
