--- a/client/src/components/customScss/index.scss
+++ b/client/src/components/customScss/index.scss
@@ -2,6 +2,24 @@
     margin: 20px 30px 30px 30px;
     padding:0px;
 }
+.body{
+  height:100vh;
+}
+.views-form{
+  background-color:red;
+  height: calc(100% - 70px);
+  margin:auto;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  background-image: url('https://i.pinimg.com/originals/a0/d8/5c/a0d85cedce9d92515f1e91c1860d40d0.jpg');
+  
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
 button:hover{
     cursor: pointer;
 }
@@ -20,7 +38,7 @@ button:hover{
     background-color:transparent;
     border:hidden;
 }
-.btn--login{
+.btn--form{
     border: 2px solid white;
     padding: 7px 20px;
 }
@@ -57,12 +75,13 @@ button:hover{
   // background-color:transparent;
   // border-bottom: 1px solid rgb(231, 226, 226, .3);  
 }
-.input-login{
+.input-form{
   background-color:transparent;
   border-bottom: 1px solid rgb(231, 226, 226, .3);
   color:white;
   height: 40px;
   font-size: 20px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
