--- a/client/src/components/Navbars/Navbar.scss
+++ b/client/src/components/Navbars/Navbar.scss
@@ -19,10 +19,14 @@
 // }
 .Navbar__list__h1{
     font-size:27px;
+    color:white;
+    text-decoration:none;
 }
 .Navbar__list__h2{
     margin: 0px 14px;
     font-size:20px;
+    color:white;
+    text-decoration:none;
 }
 .Navbar__list__h2--outline{
     border: 2px solid white; 
