failt to rebuild document

--- a/client/src/components/Documents/Document.scss
+++ b/client/src/components/Documents/Document.scss
@@ -46,6 +46,7 @@
 }
 
 .doc__content__leftbar__item__toolbar{
+    background-color: #e7e9eb;
     position: absolute;
     top: 0px;
     right: -25px;
