--- a/client/src/components/InputComponents/input.scss
+++ b/client/src/components/InputComponents/input.scss
@@ -50,9 +50,11 @@ $c-dark-blue: rgba(96, 130, 226, 0.5);
 
 // Input Container
 .iContainer{
+
 }
 .iContainer__input{
     border: 2px solid $c-dark-blue;
+    border-radius: 0.3rem;
     padding: 18px;
 }
 .iContainer__toolbar{
