finish process data

--- a/client/src/components/Doc/doc.scss
+++ b/client/src/components/Doc/doc.scss
@@ -57,6 +57,9 @@ $c-dark-blue: rgba(96, 130, 226, 0.5);
     display: flex;
     justify-content:flex-end;
 }
+.doc__right__ParentTitle{
+    margin-bottom: 20px;
+}
 
 .docForm{
     width: 100%;
