--- a/client/src/components/Toolbar/Toolbar.scss
+++ b/client/src/components/Toolbar/Toolbar.scss
@@ -3,6 +3,7 @@
     padding-top:3px;
     width:100px;
     display:flex;
+    flex-direction:row;
     justify-content: space-evenly;
     border-radius: 0.3em;
     box-shadow: 0.2rem 0.2rem 0.4rem 0.1rem rgba(0, 0, 0, 0.4);
