--- a/client/src/components/customScss/tests.scss
+++ b/client/src/components/customScss/tests.scss
@@ -1,3 +1,15 @@
 .test{
     margin:100px;
+    border: 1px solid #000;
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+}
+
+.item{
+    background-color:aquamarine;
+}
+
+.item:nth-child(3){
+    color: red;
 }
