add mobile mode

--- a/client/src/components/Navbars/Navbar.scss
+++ b/client/src/components/Navbars/Navbar.scss
@@ -1,38 +1,126 @@
-.Navbar{
-    background:#181718;
-    color:white;
-    display:flex;
-    align-items:center;
-    font-family:arial;
+// .navbar{
+//     background:#181718;
+//     color:white;
+//     display:flex;
+//     align-items:center;
+//     // font-family:arial;
+//     justify-content: space-between;
+//     height:70px;
+// }
+
+// .navbar__list{
+//     display:flex;
+//     align-items:center;
+//     margin:0px 30px;
+//     cursor: pointer;
+// }
+// // .navbar__list:hover{
+// //     cursor:pointer;
+// // }
+// .navbar__list__h1{
+//     font-size:27px;
+//     color:white;
+//     text-decoration:none;
+//     padding: 0;
+//     margin: 0;
+// }
+// .navbar__list__h2{
+//     margin: 0px 14px;
+//     font-size:20px;
+//     color:white;
+//     text-decoration:none;
+// }
+// .navbar__list__h2--outline{
+//     border: 2px solid white; 
+//     padding :5px 15px;
+// }
+// .navbar__list__h2--outline:hover{
+//     color:black;
+//     background-color: white;
+// }
+
+// /**********/
+
+// .navbar__left{
+//     width: 100%;
+// }
+// .navbar__link{
+//     margin: 0;
+//     padding: 0;
+//     height: 100%;
+//     background-color: yellow;
+// }
+// .navbar__item{
+//     color:white;
+//     height: 100%;
+// }
+
+
+.navbar{
+    height: 65px;
+    background-color:#181718;
+    display: flex;
+    font-family: arial;
     justify-content: space-between;
-    height:70px;
+    width: 100%;
 }
 
-.Navbar__list{
-    display:flex;
-    align-items:center;
-    margin:0px 30px;
-    cursor: pointer;
+.navbar__left{
+    display: flex;
+    align-items: center;
 }
-// .Navbar__list:hover{
-//     cursor:pointer;
-// }
-.Navbar__list__h1{
-    font-size:27px;
+.navbar__item{
+    margin-left: 25px;
+}
+.navbar__item--login{
+    border: 1px solid white;
+    padding: 5px 20px;
+}
+.navbar__link{
     color:white;
-    text-decoration:none;
 }
-.Navbar__list__h2{
-    margin: 0px 14px;
-    font-size:20px;
-    color:white;
-    text-decoration:none;
+
+.navbar__right{
+    box-sizing: border-box;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 }
-.Navbar__list__h2--outline{
-    border: 2px solid white; 
-    padding :5px 15px;
+.navbar__item__MenuIcon{
+    margin-right: 12px;
 }
-.Navbar__list__h2--outline:hover{
-    color:black;
-    background-color: white;
+
+// Mobile + ipad
+@media screen and (max-width:540px){
+    .navbar{
+        height: auto;
+        flex-direction: column;
+    }
+    .navbar__left{
+        justify-content: space-between;
+        height: 67px;
+    }
+    .navbar__right{
+        width: 100%;
+        flex-direction: column;
+        margin-right: 0px;
+        justify-content:space-evenly;
+        height: calc(100vh - 67px);
+        z-index: 10;
+    }
+    .navbar__right .navbar__link{
+        width: 100%;
+        height: 20%;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+    }
+    .navbar__right .navbar__link:hover{
+        background-color: rgb(96, 103, 107);
+    }
+    // .navbar__right .navbar__item{
+    //     margin: 0px;
+    //     padding: 25px;
+    // }
 }
