--- a/client/src/components/customScss/tests.scss
+++ b/client/src/components/customScss/tests.scss
@@ -1,15 +1,11 @@
 .test{
-    margin:100px;
-    border: 1px solid #000;
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
+    height: calc(100% - 65px);
+    
 }
-
-.item{
-    background-color:aquamarine;
-}
-
-.item:nth-child(3){
-    color: red;
+.BgVideo{
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
 }
