--- a/client/src/components/Words/WCard.scss
+++ b/client/src/components/Words/WCard.scss
@@ -1,6 +1,15 @@
 $card_height: 200px;
 $card_width: 170px;
 
+.SUWCard{
+    display: flex;
+    position: relative;
+    width:#{$card_width * 2.5};
+    transition: 0.4s linear;
+}
+.SUWCard--move{
+    width:$card_width;
+}
 .WCards{
     display: flex;
 }
@@ -9,14 +18,11 @@ $card_width: 170px;
     width: $card_width;
     height: $card_height;
     background-color: transparent;
-    box-shadow: 0.3rem 0.3rem 0.4rem 0.1rem rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     position: relative;
-}
-.WCard + .WCard{
-    margin-left: 20px;
-    margin-bottom: 20px;
+    font-size: 12px;
+    border-radius:0.3rem;
 }
 
 /** FRONT CARD **/
@@ -28,6 +34,7 @@ $card_width: 170px;
     height:$card_height;
     transition: 0.3s linear;
     border-radius: 0.3rem;
+    box-shadow: 0.3rem 0.3rem 0.4rem 0.1rem rgba(0, 0, 0, 0.2);
 }
 .flip{
     transform: rotateY(180deg);
@@ -38,7 +45,7 @@ $card_width: 170px;
     width: 100%;
     height: 50%;
     display: block;
-    border-radius: 0.3rem;
+    border-radius: 0.3rem 0.3rem 0 0;
 }
 .WCard__text{
     background-color: white;
@@ -68,12 +75,26 @@ $card_width: 170px;
     justify-content: flex-end;
     border-radius:0 0 0.3rem 0.3rem;
 }
+.WCard__btnContainer--update{
+    border-radius: 0;
+    background-color: transparent;
+    padding: 5px 0 0 0;
+    box-sizing: border-box;
+}
 .WCard__btn{
     display: block;
     padding:0 10px;
     width: auto;
     font-size: 10px;
     height: 100%;
+}
+.WCard__UpdateIcon{
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    padding-top: 2px;
+    color: rgb(49, 127, 230);
+    cursor:pointer;
 }
 
 /** BACK CARD **/
@@ -85,7 +106,59 @@ $card_width: 170px;
     left: 0px;
     height:$card_height;
     transition: 0.3s ease-in-out;
+    box-shadow: 0.3rem 0.3rem 0.4rem 0.1rem rgba(0, 0, 0, 0.2);
 }
 .WCard--hide{
     display: none;
 }
+
+/** WCARD UPDATE **/
+.WCard--update{
+    width: $card_width;
+    box-sizing: border-box;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0.2rem 0.2rem 0.4rem 0.15rem rgba(0, 0, 0, 0.2);
+    transition: 0.4s linear;
+    transform-origin: 0% 100%;
+    position: absolute;
+    transform: rotateY(90deg);
+    // left:-$card_width;
+}
+.WCard__FormHeader{
+    display: flex;
+
+}
+.WCard__FormHeader__left, .WCard__FormHeader__right{
+    width: 50%;
+}
+.WCard__input{
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    background-color: #fff;
+    outline:none;
+    border: 1px solid rgb(32, 121, 218);
+    border-radius:0.2rem;
+    height: 20px;
+}
+.WCard__input--textarea{
+    height: 40px;
+}
+.WCard__FormHeader__left + .WCard__FormHeader__right{
+    margin-left: 10px;
+}
+.btn--WCardUpdate{
+    padding: 0 10px;
+    width: auto;
+}
+.WCard__update--move{
+    // transform: scaleX(0);
+    transform: translateX(170px);
+    width: #{$card_width * 1.5};
+    
+}
+
+// transform: translateX(-170px) scaleX(0);
