--- a/client/src/components/Words/WCard.scss
+++ b/client/src/components/Words/WCard.scss
@@ -10,7 +10,7 @@ $card_width: 170px;
 .SUWCard--move{
     width:$card_width;
 }
-.SUWCard + .SUWCard{
+.SUWCard ~ .SUWCard{
     margin-left: 20px;
 }
 
@@ -49,13 +49,20 @@ $card_width: 170px;
     display: block;
     border-radius: 0.3rem 0.3rem 0 0;
 }
+.WCard__title{
+    padding: 0 5px;
+    overflow: auto;
+    margin: 0;
+    height: 11%;
+    box-sizing: border-box;
+    padding: auto;
+}
 .WCard__text{
     background-color: white;
-    padding: 0;
     margin: 0;
     font-size:14px;
     width: 100%;
-    height: 38%;
+    height: 27%;
     overflow: auto;
     box-sizing: border-box;
     padding: 0px 5px;
