finish process train key

--- a/client/src/components/KeyTrain/KeyTrain.scss
+++ b/client/src/components/KeyTrain/KeyTrain.scss
@@ -1,6 +1,8 @@
 
 .TrainContainer__content{
-    width: 700px;
+    height: 300px;
+    width: 662px;
+    overflow: hidden;
     padding:20px;
     border: 1px solid #000;
     border-bottom: transparent;
@@ -10,7 +12,7 @@
     font-family: "Times New Roman", Times, serif;
 }
 .TrainContainer__input{
-    width: 700px;
+    width: 662px;
     padding: 20px;
     border: 1px solid #000;
     border-top:transparent;
